# Music-Wormhole

./: .gitignore  README.md
.github/workflows/: build.yml
audio-sync-share/: Cargo.toml  README.md
audio-sync-share/.github/workflows/: build.yml
audio-sync-share/flutter_app/: README.md  analysis_options.yaml  pubspec.yaml
audio-sync-share/flutter_app/android/app/: build.gradle
audio-sync-share/flutter_app/android/app/src/main/: AndroidManifest.xml
audio-sync-share/flutter_app/android/app/src/main/kotlin/com/example/audio_sync_share/: MainActivity.kt
audio-sync-share/flutter_app/lib/: main.dart
audio-sync-share/flutter_app/lib/models/: device_info.dart
audio-sync-share/flutter_app/lib/screens/: connection_screen.dart  discovery_screen.dart  home_screen.dart
audio-sync-share/flutter_app/lib/services/: audio_service.dart  device_discovery_service.dart  sync_service.dart
audio-sync-share/flutter_app/lib/widgets/: connection_status.dart  device_card.dart
audio-sync-share/public/: index.html
audio-sync-share/src/: error.rs  lib.rs  network.rs  sync.rs
audio-sync-share/src-tauri/: Cargo.toml  tauri.conf.json
audio-sync-share/src-tauri/icons/: placeholder.txt
flutter_app/: .gitignore  pubspec.yaml
flutter_app/android/app/: build.gradle
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/kotlin/com/audiosync/audio_sync_share/: MainActivity.kt
flutter_app/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
flutter_app/lib/: main.dart
src/: audio_capture.rs  audio_player.rs  config.rs  device.rs  lib.rs  media_control.rs
src-tauri/src/: main.rs
